Lots and lots! Auto library scanning to add other games Controller UI and movement logic, along with keyboard that will be made into its own library I think Audio improvements Performance improvements all around More Scene logic and dynamic ground

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @use "./components/global.scss" as *;
 @use "./components/buttons.scss" as *;
+@use "./components/GameControllerKeyboard.scss" as *;
 
 @use "./pages/carousel" as *;
 @use "./pages/landing" as *;
