--- a/styles/pages/wall.scss
+++ b/styles/pages/wall.scss
@@ -5,7 +5,7 @@
     .grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 1rem;
+        // gap: 1rem;
 
         .grid-item {
             border: 1px solid #555;
