--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,18 @@
 @use "./pages/wall" as *;
 @use "./pages/not-found" as *;
 
+.road-rage-regular {
+  font-family: "Road Rage", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.tiny5-regular {
+  font-family: "Tiny5", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 i {
     margin-right: 0.2rem;
 }
