--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -1,13 +1,13 @@
 @use "@/styles/components/global.scss" as *;
 
-.race-game-landing-page {
+.landing-page {
     position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 0px);
     // margin-bottom: calc(50px + 0.5rem);
 
     // @include media-breakpoint-up(lg) {
@@ -33,6 +33,24 @@
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
+    }
+
+    .synthwave-animation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+
+        canvas {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
     }
 
     .rules-media-wrap {
@@ -92,6 +110,30 @@
                 border: 2px solid #000;
             }
         }
+    }
+
+    .landing-animation-toggle-button {
+        font-size: 0.6rem !important;
+    }
+
+    .visit-articles-button {
+        img {
+            transform: scale(3) translateX(-1px);
+        }
+    }
+
+    .landing-title {
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 1rem;
+
+        @include media-breakpoint-up(lg) {
+            font-size: 3rem;
+        }
+    }
+
+    .landing-logo-image {
+        margin-bottom: -2.5rem;
     }
 
 }
