--- a/styles/pages/wall.scss
+++ b/styles/pages/wall.scss
@@ -4,13 +4,16 @@
 
     .grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
         // gap: 1rem;
 
         .grid-item {
             border: 1px solid #555;
             padding: 1rem;
             border-radius: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            // align-items: center;
         }
     }
 
