--- a/styles/pages/wall.scss
+++ b/styles/pages/wall.scss
@@ -1,11 +1,39 @@
+@use "@/styles/components/global.scss" as *;
+
 .games-showcase-wall-page {
     background: rgb(39, 39, 39);
     color: white;
+
+    nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1rem;
+        z-index: 100;
+        height: 100px;
+        background: rgba(0, 0, 0, 1);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 1rem;
+
+        @include media-breakpoint-up(lg) {
+            flex-direction: row;
+            height: 50px;
+        }
+    }
 
     .grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
         // gap: 1rem;
+        margin-top: 100px;
+
+        @include media-breakpoint-up(lg) {
+            margin-top: 50px;
+        }
 
         .grid-item {
             border: 1px solid #555;
