--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -126,6 +126,7 @@
         font-size: 2rem;
         text-align: center;
         margin-bottom: 1rem;
+        text-shadow: 0px 0px 5px black;
 
         @include media-breakpoint-up(lg) {
             font-size: 3rem;
