--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,25 +9,59 @@
 @use "./pages/wall" as *;
 @use "./pages/not-found" as *;
 
+[data-bs-theme="dark"] {
+
+    .tooltip {
+        --bs-tooltip-bg: #000;
+        --bs-tooltip-color: var(--bs-white) !important;
+    }
+
+    .shadow-articles {
+        box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.25), 0 2px 3px rgba(255, 255, 255, 0.2);
+    }
+
+    .bg-light {
+        background-color: black !important;
+        color: white !important;
+    }
+
+}
+
 .road-rage-regular {
-  font-family: "Road Rage", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Road Rage", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .tiny5-regular {
-  font-family: "Tiny5", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Tiny5", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 i {
     margin-right: 0.2rem;
-}
 
-input {
-    width: 100%;
-    font-size: 1.5rem !important;
+    &.action {
+        background-color: var(--card-background);
+        border-radius: 100px;
+        font-size: 0.8rem;
+        border: 1px solid rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.2);
+        transition-duration: 200ms;
+        cursor: pointer;
+        color: #fff;
+
+        @include media-breakpoint-up(lg) {
+            width: 25px;
+            height: 25px;
+        }
+    }
 }
 
 button {
