--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -137,4 +137,14 @@
         margin-bottom: -2.5rem;
     }
 
+    button:focus,
+    input:focus,
+    a:focus {
+        outline: 3px solid #ffffff !important;
+        outline-offset: 2px;
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+        z-index: 10;
+        position: relative;
+    }
+
 }
