--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -123,6 +123,7 @@
     }
 
     .landing-title {
+        color: white;
         font-size: 2rem;
         text-align: center;
         margin-bottom: 1rem;
